--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Atlas: european languages</title>
     <link rel="stylesheet" href="style.css" />
     <script src="data/europe_countries.json"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet-src.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-search@2.3.7/dist/leaflet-search.src.css" />
@@ -32,6 +33,7 @@
           </div>
           <div class="graph" id="d3-container"> 
           </div>
+          <button type="button" class="btn btn-danger" onclick="reset()">Reset</button>
         </div>
         
           <!-- <div>
@@ -41,9 +43,6 @@
             <button class="reset allbuttons" id="resetButton" onclick="resetFunction()">Reset</button>
         </div> -->
       </div>
-        <div class="copyright">
-          2022 © Melinda Femminis
-        </div>
     </div>
       
     <script src="index.js"></script>
