New readme, deleted unused files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
 
-    <h1>Deaths and cases of SARS-CoV-2 (COVID-19) in Europe</h1>
+    <h1 class="main-title">Deaths and cases of SARS-CoV-2 (COVID-19) in Europe</h1>
         
     <div class="main">
 
